@@ -72,6 +72,20 @@ cx.fam.suika.y2005.DOM.Implementation.DOMImplementation._AddFeature
     createCSSCharsetRule: function (charset) {
       return new cx.fam.suika.y2005.CSS.Node.CharsetRule (charset);
     },
+    
+    /**
+       Creates a CSS |@namespace| rule object.
+       
+       [non-standard]
+       
+       @param prefix The namespace prefix, or |null| if it defines the
+                     default namespace URI.
+       @param namespaceURI The namespace URI.
+       @return The newly created |@namespace| rule.
+    */
+    createCSSNamespaceRule: function (prefix, namespaceURI) {
+      return new cx.fam.suika.y2005.CSS.Node.NamespaceRule (prefix, namespaceURI);
+    },
     /**
        Creates a CSS rule set object.
        [non-standard]
@@ -97,7 +111,7 @@ cx.fam.suika.y2005.CSS.Node.Node = function () {
 };
 
 cx.fam.suika.y2005.CSS.Node.Node.prototype.getCSSNodeType = function () {
-  return this.cssNodeType;
+  return this.CSS_UNKNOWN_NODE;
 };
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_UNKNOWN_RULE_NODE         =   0;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_RULE_SET_NODE             =   1;
@@ -106,11 +120,12 @@ cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_AT_IMPORT_NODE            =   3;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_AT_MEDIA_NODE             =   4;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_AT_FONT_FACE_NODE         =   5;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_AT_PAGE_NODE              =   6;
+cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_UNKNOWN_NODE              = 100;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_STYLE_SHEET_NODE          = 101;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_DECLARATION_BLOCK_NODE    = 102;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_EMPTY_DECLARATION_NODE    = 103;
 cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_PROPERTY_DECLARATION_NODE = 104;
-cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_VALUE_NODE                = 105;
+cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_AT_NAMESPACE_NODE         = 106;
 
 /**
    The textual representation of the node.
@@ -120,6 +135,25 @@ cx.fam.suika.y2005.CSS.Node.Node.prototype.getCSSText = function () {
   return null;
 };
 cx.fam.suika.y2005.CSS.Node.Node.prototype.setCSSText = function (newValue) {};
+
+/**
+   Returns the namespace URI associated to a namespace prefix,
+   if any, or |null|.
+   [non-standard]
+   
+   @param prefix The namespace prefix to lookup.  If |null|, default
+                 namespace URI, if any, is returned.  Note that in CSS
+                 identifiers including prefixes are case-insensitive.
+   @return The namespace URI associated with |prefix|, if any, or |null|.
+*/
+cx.fam.suika.y2005.CSS.Node.Node.prototype.lookupNamespaceURI =
+function (prefix) {
+  if (this.parentRule) {
+    return this.parentRule.lookupNamespaceURI (prefix);
+  } else {
+    return null;
+  }
+};
 
 cx.fam.suika.y2005.CSS.Node.Node.prototype.toString = function () {
   return "[object CSSNode]";
@@ -133,10 +167,12 @@ cx.fam.suika.y2005.CSS.Node.Node.prototype.toString = function () {
 */
 cx.fam.suika.y2005.CSS.Node.StyleSheet = function () {
   cx.fam.suika.y2005.CSS.Node.StyleSheet._superclass.apply (this, arguments);
-  this.cssNodeType = this.CSS_STYLE_SHEET_NODE;
   this.cssRules = new cx.fam.suika.y2005.CSS.RuleList ();
 };
 cx.fam.suika.y2005.CSS.Node.StyleSheet.inherits (cx.fam.suika.y2005.CSS.Node.Node);
+cx.fam.suika.y2005.CSS.Node.StyleSheet.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Node.prototype.CSS_STYLE_SHEET_NODE;
+};
 
 /**
    Appends a |CSSRule| to the list.
@@ -162,8 +198,15 @@ cx.fam.suika.y2005.CSS.Node.StyleSheet.prototype.getCSSRules = function () {
 */
 cx.fam.suika.y2005.CSS.Node.StyleSheet.prototype.getCSSText = function () {
   var r = "";
+  var lastType = this.CSS_UNKNOWN_RULE_NODE;
   for (var i = 0; i < this.cssRules.length; i++) {
-    r += this.cssRules[i].getCSSText () + "\n";
+    var rule = this.cssRules[i];
+    if (lastType == this.CSS_RULE_SET_NODE &&
+        rule.getCSSNodeType () == this.CSS_RULE_SET_NODE) {
+      r += "\n";
+    }
+    lastType = rule.getCSSNodeType ();
+    r += rule.getCSSText ();
   }
   /* TODO: Namespace fixup */
   return r;
@@ -193,6 +236,37 @@ cx.fam.suika.y2005.CSS.Node.StyleSheet.prototype._SetHref = function (newValue) 
 
 /* Not implemented: |media|, |ownerNode| from DOM Level 2 Style Sheets,
                     |setCSSText| */
+
+/**
+   Returns the namespace URI associated to a namespace prefix,
+   if any, or |null|.
+   [non-standard]
+   
+   @param prefix The namespace prefix to lookup.  If |null|, default
+                 namespace URI, if any, is returned.  Note that in CSS
+                 identifiers including prefixes are case-insensitive.
+   @return The namespace URI associated with |prefix|, if any, or |null|.
+*/
+cx.fam.suika.y2005.CSS.Node.StyleSheet.prototype.lookupNamespaceURI =
+function (prefix) {
+  prefix = prefix.toLowerCase ();
+  var uri = null;
+  for (var i = 0; i < this.cssRules.length; i++) {
+    var rule = this.cssRules[i];
+    var ruleType = rule.getType ();
+    if (ruleType == this.NAMESPACE_RULE) {
+      if (rule.getPrefix () == prefix) {
+        uri = rule.getNamespaceURI ();
+      }
+      /* Don't |break|, since last occurence is in effect if there is 
+         more than one declarations. */
+    } else if (ruleType != this.CHARSET_RULE &&
+               ruleType != this.IMPORT_RULE) {
+      break;
+    }
+  }
+  return uri;
+};
 
 /**
    The rule that references the style sheet, if any, or |null| otherwise.
@@ -293,10 +367,10 @@ cx.fam.suika.y2005.CSS.Node.Rule.prototype._SetParentRule = function (newValue) 
   in this implementation.
 */
 cx.fam.suika.y2005.CSS.Node.Rule.prototype.getParentRule = function () {
-  return this.parentStyleSheet;
+  return this.parentRule;
 };
 cx.fam.suika.y2005.CSS.Node.Rule.prototype._SetParentRule = function (newValue) {
-  this.parentStyleSheet = newValue;
+  this.parentRule = newValue;
 };
 
 /**
@@ -344,7 +418,7 @@ cx.fam.suika.y2005.CSS.Node.Rule.prototype.setRulePrefix = function (newValue) {
   [DOM Level 2 CSS]
 */
 cx.fam.suika.y2005.CSS.Node.Rule.prototype.getType = function () {
-  return this.cssNodeType;
+  return this.UNKNOWN_RULE;
 };
 cx.fam.suika.y2005.CSS.Node.Rule.prototype.UNKNOWN_RULE   = 0;
 cx.fam.suika.y2005.CSS.Node.Rule.prototype.STYLE_RULE     = 1;
@@ -355,12 +429,21 @@ cx.fam.suika.y2005.CSS.Node.Rule.prototype.FONT_FACE_RULE = 5;
 cx.fam.suika.y2005.CSS.Node.Rule.prototype.PAGE_RULE      = 6;
 
 /**
+   |@namespace| rule.
+   [non-standard]
+   
+     Note.  The |type| value of |@namespace| rules is |0|,
+            i.e. |UNKNOWN_RULE|, in Gecko.
+*/
+cx.fam.suika.y2005.CSS.Node.Rule.prototype.NAMESPACE_RULE = 1001;
+
+/**
    Interface |CSSAtRule|
 */
 cx.fam.suika.y2005.CSS.Node.AtRule = function (namespaceURI, localName) {
-  cx.fam.suika.y2005.CSS.Node.AtRule._superclass.apply (this, arguments);
+  cx.fam.suika.y2005.CSS.Node.AtRule._superclass.apply (this, []);
   this.ruleNamespaceURI = namespaceURI;
-  this.ruleLocalName = localName;
+  this.ruleLocalName = localName.toLowerCase ();
 };
 cx.fam.suika.y2005.CSS.Node.AtRule.inherits (cx.fam.suika.y2005.CSS.Node.Rule);
 
@@ -383,6 +466,12 @@ cx.fam.suika.y2005.CSS.Node.MediaRule = function (mq) {
   }
 };
 cx.fam.suika.y2005.CSS.Node.MediaRule.inherits (cx.fam.suika.y2005.CSS.Node.AtRule);
+cx.fam.suika.y2005.CSS.Node.MediaRule.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_AT_MEDIA_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.MediaRule.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.MEDIA_RULE;
+};
 
 /**
    The list of rules within the |@media| block.
@@ -434,10 +523,17 @@ cx.fam.suika.y2005.CSS.Node.MediaRule.prototype.toString = function () {
    Interface |CSSFontFaceRule|
 */
 cx.fam.suika.y2005.CSS.Node.FontFaceRule = function () {
-  cx.fam.suika.y2005.CSS.Node.FontFaceRule._superclass.apply (this, arguments);
+  cx.fam.suika.y2005.CSS.Node.FontFaceRule._superclass.apply
+    (this, ["urn:x-suika-fam-cx:css:", "font-face"]);
   this.style = new cx.fam.suika.y2005.CSS.Node.StyleDeclaration ();
 };
 cx.fam.suika.y2005.CSS.Node.FontFaceRule.inherits (cx.fam.suika.y2005.CSS.Node.AtRule);
+cx.fam.suika.y2005.CSS.Node.FontFaceRule.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_AT_FONT_FACE_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.FontFaceRule.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.FONT_FACE_RULE;
+};
 
 /**
    The textual representation of the rule.
@@ -471,9 +567,16 @@ cx.fam.suika.y2005.CSS.Node.FontFaceRule.prototype.toString = function () {
    Interface |CSSPageRule|
 */
 cx.fam.suika.y2005.CSS.Node.PageRule = function () {
-  cx.fam.suika.y2005.CSS.Node.PageRule._superclass.apply (this, arguments);
+  cx.fam.suika.y2005.CSS.Node.PageRule._superclass.apply
+    (this, ["urn:x-suika-fam-cx:css:", "page"]);
 };
 cx.fam.suika.y2005.CSS.Node.PageRule.inherits (cx.fam.suika.y2005.CSS.Node.AtRule);
+cx.fam.suika.y2005.CSS.Node.PageRule.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_AT_PAGE_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.PageRule.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.PAGE_RULE;
+};
 
 /**
    The textual representation of the rule.
@@ -534,7 +637,8 @@ cx.fam.suika.y2005.CSS.Node.PageRule.prototype.toString = function () {
    Interface |CSSImportRule|
 */
 cx.fam.suika.y2005.CSS.Node.ImportRule = function (hrefArg, mediaArg) {
-  cx.fam.suika.y2005.CSS.Node.ImportRule._superclass.apply (this, arguments);
+  cx.fam.suika.y2005.CSS.Node.ImportRule._superclass.apply
+    (this, ["urn:x-suika-fam-cx:css:", "import"]);
   this.href = hrefArg;
   if (mediaArg) {
     this.media = mediaArg;
@@ -543,6 +647,12 @@ cx.fam.suika.y2005.CSS.Node.ImportRule = function (hrefArg, mediaArg) {
   }
 };
 cx.fam.suika.y2005.CSS.Node.ImportRule.inherits (cx.fam.suika.y2005.CSS.Node.AtRule);
+cx.fam.suika.y2005.CSS.Node.ImportRule.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_AT_IMPORT_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.ImportRule.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.IMPORT_RULE;
+};
 
 /**
    The textual representation of the rule.
@@ -552,10 +662,10 @@ cx.fam.suika.y2005.CSS.Node.ImportRule.inherits (cx.fam.suika.y2005.CSS.Node.AtR
 */
 cx.fam.suika.y2005.CSS.Node.ImportRule.prototype.getCSSText =
 function () {
-  var r = "@import '";
-        + this.href.replace (/([\u000A\u000C\u000D'\\])/,
+  var r = '@import "';
+        + this.href.replace (/([\u000A\u000C\u000D"\\])/,
                              function () { return "\\" + RegExp.$1 })
-        + "'";
+        + '"';
   var mq = this.media.getMediaText ();
   if (mq.length > 0) {
     r += " " + mq;
@@ -602,10 +712,17 @@ cx.fam.suika.y2005.CSS.Node.ImportRule.prototype.toString = function () {
    Interface |CSSCharsetRule|
 */
 cx.fam.suika.y2005.CSS.Node.CharsetRule = function (encodingArg) {
-  cx.fam.suika.y2005.CSS.Node.CharsetRule._superclass.apply (this, arguments);
+  cx.fam.suika.y2005.CSS.Node.CharsetRule._superclass.apply
+    (this, ["urn:x-suika-fam-cx:css:", "charset"]);
   this.encoding = encodingArg;
 };
 cx.fam.suika.y2005.CSS.Node.CharsetRule.inherits (cx.fam.suika.y2005.CSS.Node.AtRule);
+cx.fam.suika.y2005.CSS.Node.CharsetRule.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_AT_CHARSET_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.CharsetRule.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CHARSET_RULE;
+};
 
 /**
    The textual representation of the rule.
@@ -615,10 +732,10 @@ cx.fam.suika.y2005.CSS.Node.CharsetRule.inherits (cx.fam.suika.y2005.CSS.Node.At
 */
 cx.fam.suika.y2005.CSS.Node.CharsetRule.prototype.getCSSText =
 function () {
-  return "@charset '"
-       + this.encoding.replace (/([\u000A\u000C\u000D'\\])/,
+  return '@charset "'
+       + this.encoding.replace (/([\u000A\u000C\u000D"\\])/,
                                 function () { return "\\" + RegExp.$1 })
-       + "';\n";
+       + '";\n';
 };
 /* Not implemented: |setCSSText| */
 
@@ -636,15 +753,79 @@ cx.fam.suika.y2005.CSS.Node.CharsetRule.prototype.toString = function () {
 
 
 /**
+   Interface |CSSNamespaceRule|
+*/
+cx.fam.suika.y2005.CSS.Node.NamespaceRule = function (prefixArg, namespaceURIArg) {
+  cx.fam.suika.y2005.CSS.Node.NamespaceRule._superclass.apply
+    (this, ["urn:x-suika-fam-cx:css:", "namespace"]);
+  this.prefix = prefixArg;
+  this.namespaceURI = namespaceURIArg;
+};
+cx.fam.suika.y2005.CSS.Node.NamespaceRule.inherits
+  (cx.fam.suika.y2005.CSS.Node.AtRule);
+cx.fam.suika.y2005.CSS.Node.NamespaceRule.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_AT_NAMESPACE_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.NamespaceRule.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.NAMESPACE_RULE;
+};
+
+/**
+   The textual representation of the rule.
+   [DOM Level 2 CSS]
+*/
+cx.fam.suika.y2005.CSS.Node.NamespaceRule.prototype.getCSSText =
+function () {
+  var r = "@namespace";
+  if (this.prefix != null) r += " " + this.prefix;
+  r += ' "'
+     + this.namespaceURI.replace (/([\u000A\u000C\u000D"\\])/,
+                                  function () { return "\\" + RegExp.$1 })
+     + '";\n';
+  return r;
+};
+/* Not implemented: |setCSSText| */
+
+/**
+   The namespace URI.
+   [non-standard]
+*/
+cx.fam.suika.y2005.CSS.Node.CharsetRule.prototype.getNamespaceURI = function () {
+  return this.namespaceURI;
+};
+/* Is setter necessary? */
+
+/**
+   The namespace prefix.
+   [non-standard]
+*/
+cx.fam.suika.y2005.CSS.Node.CharsetRule.prototype.getPrefix = function () {
+  return this.encoding;
+};
+/* Is setter necessary? */
+
+cx.fam.suika.y2005.CSS.Node.NamespaceRule.prototype.toString = function () {
+  return "[object CSSNamespaceRule]";
+};
+
+
+/**
    Interface |CSSUnknownRule|
 */
-cx.fam.suika.y2005.CSS.Node.UnknownRule = function () {
-  cx.fam.suika.y2005.CSS.Node.UnknownRule._superclass.apply (this, arguments);
+cx.fam.suika.y2005.CSS.Node.UnknownRule = function (namespaceURI, localName) {
+  cx.fam.suika.y2005.CSS.Node.UnknownRule._superclass.apply
+    (this, [namespaceURI, localName]);
 };
 cx.fam.suika.y2005.CSS.Node.UnknownRule.inherits (cx.fam.suika.y2005.CSS.Node.AtRule);
 
 cx.fam.suika.y2005.CSS.Node.UnknownRule.prototype.toString = function () {
   return "[object CSSUnknownRule]";
+};
+cx.fam.suika.y2005.CSS.Node.UnknownRule.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_UNKNOWN_RULE_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.UnknownRule.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.UNKNOWN_RULE;
 };
 
 
@@ -655,10 +836,16 @@ cx.fam.suika.y2005.CSS.Node.UnknownRule.prototype.toString = function () {
 */
 cx.fam.suika.y2005.CSS.Node.RuleSet = function () {
   cx.fam.suika.y2005.CSS.Node.RuleSet._superclass.apply (this, arguments);
-  this.cssNodeType = this.CSS_RULE_SET_NODE;
   this.style = new cx.fam.suika.y2005.CSS.Node.StyleDeclaration ();
+  this.style.parentRule = this;
 };
 cx.fam.suika.y2005.CSS.Node.RuleSet.inherits (cx.fam.suika.y2005.CSS.Node.Rule);
+cx.fam.suika.y2005.CSS.Node.RuleSet.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_RULE_SET_NODE;
+};
+cx.fam.suika.y2005.CSS.Node.RuleSet.prototype.getType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.STYLE_RULE;
+};
 
 /**
    The textual representation of the rule set.
@@ -732,6 +919,9 @@ cx.fam.suika.y2005.CSS.Node.StyleDeclaration = function () {
 };
 cx.fam.suika.y2005.CSS.Node.StyleDeclaration.inherits
   (cx.fam.suika.y2005.CSS.Node.Block);
+cx.fam.suika.y2005.CSS.Node.StyleDeclaration.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_DECLARATION_BLOCK_NODE;
+};
 
 /**
    Appends a CSS property declaration object.
@@ -739,6 +929,7 @@ cx.fam.suika.y2005.CSS.Node.StyleDeclaration.inherits
 */
 cx.fam.suika.y2005.CSS.Node.StyleDeclaration.prototype.appendPropertyNode =
 function (newProp) {
+  newProp.parentRule = this;
   return this.decls.push (newProp);
 };
 
@@ -793,9 +984,11 @@ cx.fam.suika.y2005.CSS.Node.StyleDeclaration.prototype.toString = function () {
 */
 cx.fam.suika.y2005.CSS.Node.Declaration = function () {
   cx.fam.suika.y2005.CSS.Node.Declaration._superclass.apply (this, arguments);
-  this.cssNodeType = this.CSS_EMPTY_DECLARATION_NODE;
 };
 cx.fam.suika.y2005.CSS.Node.Declaration.inherits (cx.fam.suika.y2005.CSS.Node.Node);
+cx.fam.suika.y2005.CSS.Node.Declaration.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_EMPTY_DECLARATION_NODE;
+};
 
 /**
    The textual representation of the declaration.
@@ -821,12 +1014,14 @@ cx.fam.suika.y2005.CSS.Node.Declaration.prototype.toString = function () {
 */
 cx.fam.suika.y2005.CSS.Node.PropertyDeclaration = function (nsURI, lname) {
   cx.fam.suika.y2005.CSS.Node.PropertyDeclaration._superclass.apply (this, []);
-  this.cssNodeType = this.CSS_PROPERTY_DECLARATION_NODE;
   this.propertyNamespaceURI = nsURI;
   this.propertyLocalName = lname.toLowerCase ();
 };
 cx.fam.suika.y2005.CSS.Node.PropertyDeclaration.inherits
   (cx.fam.suika.y2005.CSS.Node.Declaration);
+cx.fam.suika.y2005.CSS.Node.PropertyDeclaration.prototype.getCSSNodeType = {
+  return cx.fam.suika.y2005.CSS.Node.Rule.prototype.CSS_PROPERTY_DECLARATION_NODE;
+};
 
 /**
    The textual representation of the declaration.
@@ -931,7 +1126,7 @@ cx.fam.suika.y2005.CSS.RuleList.prototype.getLength = function () {
   return this.length;
 };
 
-/* Revision: $Date: 2005/11/01 10:40:48 $ */
+/* Revision: $Date: 2005/11/01 14:27:47 $ */
 
 /* ***** BEGIN LICENSE BLOCK *****
  * Copyright 2005 Wakaba <w@suika.fam.cx>.  All rights reserved.
